# hog3d

./: Box3D.h  CMakeLists.txt  FastHog3DComputer.cpp  FastHog3DComputer.h  FastVideoGradientComputer.cpp  FastVideoGradientComputer.h  Makefile  README  extractFeatures.cpp
ffpp/: Codec.cpp  Codec.h  CodecContext.cpp  CodecContext.h  FlipContext.cpp  FlipContext.h  FormatContext.cpp  FormatContext.h  Frame.cpp  Frame.h  InputFormat.cpp  InputFormat.h  InputFormatContext.cpp  InputFormatContext.h  OutputFormat.cpp  OutputFormat.h  OutputFormatContext.cpp  OutputFormatContext.h  Packet.cpp  Packet.h  PixelFormat.c  PixelFormat.h  ScalerContext.cpp  ScalerContext.h  Stream.cpp  Stream.h
opencv/: Video.cpp  Video.h
test_sequences/: hollywood2.features  kth.features  walk-simple.pos
